--- a/spring5-demo/src/main/resources/templates/books/list.html
+++ b/spring5-demo/src/main/resources/templates/books/list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <!--refrences thymeleaf namespaces and provides thymeleaf extensions to this document-->
-<html lang="em" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8"/>
         <title>Spring Framework Guru</title>
-    </head>
+    </head>00
     <body>
         <h1>Book List</h1>
 
@@ -19,15 +19,15 @@
         <!--This is how we are asking the model to give the properties of books
         we refrence the thymeleaf and then call the attribute name of the model
         created in the controller-->
-        
-        <tr th:each="book :" ${books}>
-            <td th:text="${book.ID}">123</td>
-            <td th:text=${book.title}>Spring in Action</td>
-            <td th:text=${book.publisher.name}>Wrox</td>
+
+        <tr th:each="book : ${books}">
+            <td th:text="${book.id}">123</td>
+            <td th:text="${book.title}">Spring in Action</td>
+            <td th:text="${book.publisher.name}">Wrox</td>
             
 
         <!--thyme leaf will render this row of elements found in the model for view -->
-        <!--replacing the elements with ferences to ID to gather information from 
+        <!--replacing the elements with references to ID to gather information from 
         book repository-->
         <!--Publisher is a little different because it is not a book object but its own-->
         </tr>
