--- a/spring5-demo/src/main/resources/templates/authors/list.html
+++ b/spring5-demo/src/main/resources/templates/authors/list.html
@@ -7,23 +7,23 @@
         <title>Spring Framework Guru</title>
     </head>
     <body>
-        <h1>Book List</h1>
+        <h1>Author List</h1>
 
     <table>
         <tr>
             <th>ID</th>
-            <th>Title</th>
-            <th>Publisher</th>
+            <th>First Name</th>
+            <th>Last Name</th>
         </tr>
 
         <!--This is how we are asking the model to give the properties of books
         we refrence the thymeleaf and then call the attribute name of the model
         created in the controller-->
 
-        <tr th:each="book : ${books}">
-            <td th:text="${book.id}">123</td>
-            <td th:text="${book.title}">Spring in Action</td>
-            <td th:text="${book.publisher.name}">Wrox</td>
+        <tr th:each="author : ${authors}">
+            <td th:text="${author.id}">123</td>
+            <td th:text="${author.firstName}">Spring in Action</td>
+            <td th:text="${author.lastName}">Wrox</td>
             
 
         <!--thyme leaf will render this row of elements found in the model for view -->
